--- a/index.html
+++ b/index.html
@@ -173,6 +173,53 @@
               <div class="card-text">
                 <h3 class="team-worker title">Игорь Демьяненко</h3>
                 <p class="team-description">Product Designer</p>
+                <div class="social">
+                  <ul class="social-list list">
+                    <li>
+                      <a
+                        href="https://www.instagram.com/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-facebook"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
 
@@ -188,6 +235,53 @@
               <div class="card-text">
                 <h3 class="team-worker title">Ольга Репина</h3>
                 <p class="team-description">Frontend Developer</p>
+                <div class="social">
+                  <ul class="social-list list">
+                    <li>
+                      <a
+                        href="https://www.instagram.com/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-facebook"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
 
@@ -203,6 +297,53 @@
               <div class="card-text">
                 <h3 class="team-worker title">Николай Тарасов</h3>
                 <p class="team-description">Marketing</p>
+                <div class="social">
+                  <ul class="social-list list">
+                    <li>
+                      <a
+                        href="https://www.instagram.com/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-facebook"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
 
@@ -218,40 +359,181 @@
               <div class="card-text">
                 <h3 class="team-worker title">Михаил Ермаков</h3>
                 <p class="team-description">UI Designer</p>
+                <div class="social">
+                  <ul class="social-list list">
+                    <li>
+                      <a
+                        href="https://www.instagram.com/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                      >
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-facebook"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                          <svg class="social-icon">
+                            <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                          </svg>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <section class="clients section">
+        <div class="container">
+          <h2 class="section-title title">Постоянные клиенты</h2>
+          <div class="copmanys">
+            <ul class="list card-set">
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer">
+                  <svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer"
+                  ><svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-2"></use></svg
+                ></a>
+              </li>
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer"
+                  ><svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-3"></use></svg
+                ></a>
+              </li>
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer"
+                  ><svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-4"></use></svg
+                ></a>
+              </li>
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer"
+                  ><svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-5"></use></svg
+                ></a>
+              </li>
+              <li class="company-item card-item">
+                <a href="http://" target="_blank" rel="noopener noreferrer"
+                  ><svg class="company-icon">
+                    <use href="./images/icons/icons.svg#icon-company-6"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <!-- Logo -->
-        <a class="footer-logo link logo" href="./index.html"
-          >Web<span class="logo-white">Studio</span></a
-        >
+      <div class="container footer-columns">
+        <div class="adress-column">
+          <!-- Logo -->
+          <a class="footer-logo link logo" href="./index.html"
+            >Web<span class="logo-white">Studio</span></a
+          >
 
-        <!-- Address -->
-        <address class="address">
-          <ul class="list address-list">
-            <li class="item">
-              <a
-                class="address-link link"
-                href="https://goo.gl/maps/jnasmkMAZztD2F1y9"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="item">
-              <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <!-- Phone -->
-            <li class="item">
-              <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+          <!-- Address -->
+          <address class="address">
+            <ul class="list address-list">
+              <li class="item">
+                <a
+                  class="address-link link"
+                  href="https://goo.gl/maps/jnasmkMAZztD2F1y9"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="item">
+                <a class="address-link link" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <!-- Phone -->
+              <li class="item">
+                <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-column">
+          <h2 class="title">присоединяйтесь</h2>
+          <div class="social">
+            <ul class="social-list list">
+              <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                  <div class="circle">
+                    <svg class="social-icon">
+                      <use href="./images/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
+                  <div class="circle">
+                    <svg class="social-icon">
+                      <use href="./images/icons/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                  <div class="circle">
+                    <svg class="social-icon">
+                      <use href="./images/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                  <div class="circle">
+                    <svg class="social-icon">
+                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
