--- a/index.html
+++ b/index.html
@@ -417,38 +417,38 @@
           <div class="copmanys">
             <ul class="list card-set">
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer">
+                <a href="#" target="_blank" rel="noopener noreferrer">
                   <svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer"
+                <a href="#" target="_blank" rel="noopener noreferrer"
                   ><svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-2"></use></svg
                 ></a>
               </li>
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer"
+                <a href="#" target="_blank" rel="noopener noreferrer"
                   ><svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-3"></use></svg
                 ></a>
               </li>
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer"
+                <a href="#" target="_blank" rel="noopener noreferrer"
                   ><svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-4"></use></svg
                 ></a>
               </li>
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer"
+                <a href="#" target="_blank" rel="noopener noreferrer"
                   ><svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-5"></use></svg
                 ></a>
               </li>
               <li class="company-item card-item">
-                <a href="http://" target="_blank" rel="noopener noreferrer"
+                <a href="#" target="_blank" rel="noopener noreferrer"
                   ><svg class="company-icon">
                     <use href="./images/icons/icons.svg#icon-company-6"></use></svg
                 ></a>
