--- a/index.html
+++ b/index.html
@@ -42,19 +42,23 @@
         </nav>
         <ul class="auth-list list">
           <!-- email -->
-          <li class="auth-item mail">
-            <svg class="icon-mail">
-              <use href="./images/icons/icons.svg#icon-mail"></use>
-            </svg>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="auth-item">
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="auth-icon" width="16" height="12">
+                <use href="./images/icons/icons.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
 
           <!-- Phone -->
-          <li class="auth-item phone">
-            <svg class="icon-phone">
-              <use href="./images/icons/icons.svg#icon-phone"></use>
-            </svg>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="auth-item">
+            <a class="link" href="tel:+380961111111">
+              <svg class="auth-icon" width="10" height="16">
+                <use href="./images/icons/icons.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
