--- a/portfolio.html
+++ b/portfolio.html
@@ -42,19 +42,23 @@
         </nav>
         <ul class="auth-list list">
           <!-- email -->
-          <li class="auth-item mail">
-            <svg class="icon-mail">
-              <use href="./images/icons/icons.svg#icon-mail"></use>
-            </svg>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="auth-item">
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="auth-icon" width="16" height="12">
+                <use href="./images/icons/icons.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
 
           <!-- Phone -->
-          <li class="auth-item phone">
-            <svg class="icon-phone">
-              <use href="./images/icons/icons.svg#icon-phone"></use>
-            </svg>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="auth-item">
+            <a class="link" href="tel:+380961111111">
+              <svg class="auth-icon" width="10" height="16">
+                <use href="./images/icons/icons.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -252,49 +256,61 @@
         </div>
         <div class="social-column">
           <h2 class="title">присоединяйтесь</h2>
-          <div class="social">
-            <ul class="social-list list">
-              <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                  <div class="circle">
-                    <svg class="social-icon">
-                      <use href="./images/icons/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                </a>
-              </li>
+          <!-- <div class="social"> -->
+          <ul class="social-list list">
+            <li class="item">
+              <a
+                class="circle"
+                href="https://www.instagram.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
 
-              <li>
-                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer">
-                  <div class="circle">
-                    <svg class="social-icon">
-                      <use href="./images/icons/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                </a>
-              </li>
+            <li class="item">
+              <a
+                class="circle"
+                href="https://twitter.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
 
-              <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                  <div class="circle">
-                    <svg class="social-icon">
-                      <use href="./images/icons/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                </a>
-              </li>
+            <li class="item">
+              <a
+                class="circle"
+                href="https://www.facebook.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
 
-              <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                  <div class="circle">
-                    <svg class="social-icon">
-                      <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
+            <li class="item">
+              <a
+                class="circle"
+                href="https://www.linkedin.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="social-icon">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <!-- </div> -->
         </div>
       </div>
     </footer>
