--- a/index.html
+++ b/index.html
@@ -177,61 +177,60 @@
               <div class="card-text">
                 <h3 class="team-worker title">Игорь Демьяненко</h3>
                 <p class="team-description">Product Designer</p>
-                <div class="social">
-                  <ul class="social-list list">
-                    <li>
-                      <a
-                        class="circle"
-                        href="https://www.instagram.com/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="social-icon">
-                          <use href="./images/icons/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
 
-                    <li>
-                      <a
-                        class="circle"
-                        href="https://twitter.com/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="social-icon">
-                          <use href="./images/icons/icons.svg#icon-twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
+                <ul class="social-list list">
+                  <li class="social-item">
+                    <a
+                      class="circle"
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <li>
-                      <a
-                        class="circle"
-                        href="https://www.facebook.com/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="social-icon">
-                          <use href="./images/icons/icons.svg#icon-facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
+                  <li class="social-item">
+                    <a
+                      class="circle"
+                      href="https://twitter.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
 
-                    <li>
-                      <a
-                        class="circle"
-                        href="https://www.linkedin.com/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                      >
-                        <svg class="social-icon">
-                          <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+                  <li class="social-item">
+                    <a
+                      class="circle"
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a
+                      class="circle"
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
+                      <svg class="social-icon">
+                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -249,7 +248,7 @@
                 <p class="team-description">Frontend Developer</p>
                 <div class="social">
                   <ul class="social-list list">
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.instagram.com/"
@@ -262,7 +261,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://twitter.com/"
@@ -275,7 +274,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.facebook.com/"
@@ -288,7 +287,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.linkedin.com/"
@@ -319,7 +318,7 @@
                 <p class="team-description">Marketing</p>
                 <div class="social">
                   <ul class="social-list list">
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.instagram.com/"
@@ -332,7 +331,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://twitter.com/"
@@ -345,7 +344,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.facebook.com/"
@@ -358,7 +357,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.linkedin.com/"
@@ -389,7 +388,7 @@
                 <p class="team-description">UI Designer</p>
                 <div class="social">
                   <ul class="social-list list">
-                    <li>
+                    <li class="social-item" class="social-item">
                       <a
                         class="circle"
                         href="https://www.instagram.com/"
@@ -402,7 +401,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item" class="social-item">
                       <a
                         class="circle"
                         href="https://twitter.com/"
@@ -415,7 +414,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item" class="social-item">
                       <a
                         class="circle"
                         href="https://www.facebook.com/"
@@ -428,7 +427,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="social-item" class="social-item">
                       <a
                         class="circle"
                         href="https://www.linkedin.com/"
