--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <p class="team-description">UI Designer</p>
                 <div class="social">
                   <ul class="social-list list">
-                    <li class="social-item" class="social-item">
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.instagram.com/"
@@ -401,7 +401,7 @@
                       </a>
                     </li>
 
-                    <li class="social-item" class="social-item">
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://twitter.com/"
@@ -414,7 +414,7 @@
                       </a>
                     </li>
 
-                    <li class="social-item" class="social-item">
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.facebook.com/"
@@ -427,7 +427,7 @@
                       </a>
                     </li>
 
-                    <li class="social-item" class="social-item">
+                    <li class="social-item">
                       <a
                         class="circle"
                         href="https://www.linkedin.com/"
